<resources>
    <string name="name_app">CoasterCreditCounter</string>
    <string name="title_relocate">Relocate</string>
    <string name="title_sort">Sort</string>
    <string name="subtitle_relocate_select_new_parent">select new parent location</string>
    <string name="subtitle_management">management</string>
    <string name="subtitle_to_assign_to_attraction">to assign to attraction</string>
    <string name="subtitle_to_open">to open</string>
    <string name="text_accept">Accept</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_close">Close</string>
    <string name="text_select_all">select all</string>
    <string name="text_deselect_all">deselect all</string>
    <string name="text_add_untracked_rides">add untracked rides</string>
    <string name="text_untracked_rides">Untracked rides:</string>
    <string name="text_total_rides">total rides: %1$d</string>
    <string name="text_total_rides_untracked">(%1$d untracked)</string>
    <string name="text_more">…</string>
    <string name="statistic_total_coaster_credits"><b>Total credits:</b></string>
    <string name="statistic_total_credit_rides">Total rides:</string>
    <string name="statistic_total_visits">Total visits:</string>
    <string name="statistic_total_parks_visited">Total parks visited:</string>
    <string name="action_undo_title">UNDO</string>
    <string name="action_confirm_text">CONFIRM</string>
    <string name="action_confirm_delete_text">Confirm deletion of \'%1$s\'</string>
    <string name="action_confirm_remove_text">Confirm removal of \'%1$s\'</string>
    <string name="error_character_count_exceeded">Maximum of %1$d characters exceeded</string>
    <string name="error_digit_count_exceeded">Maximum of %1$d digits exceeded</string>
    <string name="error_name_invalid">Name is invalid</string>
    <string name="error_number_invalid">Number is invalid</string>
    <string name="error_undo_not_possible">UNDO is not possible…</string>
    <string name="error_no_entry_selected">No entry selected</string>
    <string name="error_property_is_tied_to_model">%1$s is tied to Model</string>
    <string name="error_missing_text">-text is missing-</string>
    <string name="alert_dialog_title_delete">DELETE</string>
    <string name="alert_dialog_message_confirm_delete">Do you really want to delete \'%1$s\' permanently?</string>
    <string name="alert_dialog_message_confirm_delete_with_children">Do you really want to delete \'%1$s\' and all of its children permanently?</string>
    <string name="alert_dialog_title_remove">REMOVE</string>
    <string name="hint_enter_untracked_ride_count">Enter count</string>
    <string name="hint_edit_untracked_ride_count">(was %1$d before)</string>
    <string name="hint_edit_name">Edit name \'%1$s\'</string>
    <string name="description_ok">@string/text_close</string>
    <string name="description_cancel">@string/text_cancel</string>
    <string name="description_close">@string/text_close</string>
    <string name="description_image_view">image</string>
    <string name="description_tab_title">title</string>
    <string name="menu_item_no_function">no function</string>
    <string name="menu_item_help">help</string>
    <string name="menu_item_sort">sort</string>
    <string name="menu_item_sort_ascending">ascending</string>
    <string name="menu_item_sort_descending">descending</string>
    <string name="menu_item_sort_locations">locations</string>
    <string name="menu_item_sort_parks">parks</string>
    <string name="menu_item_sort_attractions">sort attractions</string>
    <string name="menu_item_sort_by">sort by</string>
    <string name="menu_item_sort_by_name">name</string>
    <string name="menu_item_sort_by_credit_type">credit type</string>
    <string name="menu_item_sort_by_location">location</string>
    <string name="menu_item_sort_by_category">category</string>
    <string name="menu_item_sort_by_manufacturer">manufacturer</string>
    <string name="menu_item_sort_by_model">model</string>
    <string name="menu_item_sort_by_status">status</string>
    <string name="menu_item_group_by">group by</string>
    <string name="menu_item_group_by_none">do not group</string>
    <string name="menu_item_group_by_park">park</string>
    <string name="menu_item_group_by_credit_type">credit type</string>
    <string name="menu_item_group_by_category">category</string>
    <string name="menu_item_group_by_manufacturer">manufacturer</string>
    <string name="menu_item_group_by_model">model</string>
    <string name="menu_item_group_by_status">status</string>
    <string name="menu_item_add">add</string>
    <string name="menu_item_add_park">park</string>
    <string name="menu_item_add_location">location</string>
    <string name="menu_item_edit">edit</string>
    <string name="menu_item_delete">delete</string>
    <string name="menu_item_remove">remove</string>
    <string name="menu_item_relocate">relocate</string>
    <string name="menu_item_expand_all">expand all</string>
    <string name="menu_item_collapse_all">collapse all</string>
    <string name="menu_item_enable_editing">enable editing</string>
    <string name="menu_item_disable_editing">disable editing</string>
    <string name="menu_item_go_to_current_visit">go to current visit</string>
    <string name="menu_item_go_to_manage_elements">manage</string>
    <string name="menu_item_set_as_default">set as default</string>
    <string name="menu_item_assign_to_attractions">assign to attractions</string>
    <string name="menu_item_options">options</string>
    <string name="menu_item_developer_options_show_build_config">Show BuildConfig</string>
    <string name="menu_item_developer_options_show_log">Show Log</string>
    <string name="menu_item_developer_options_show_log_verbose">VERBOSE</string>
    <string name="menu_item_developer_options_show_log_debug">DEBUG</string>
    <string name="menu_item_developer_options_show_log_info">INFO</string>
    <string name="menu_item_developer_options_show_log_warning">WARNING</string>
    <string name="menu_item_developer_options_show_log_error">ERROR</string>
    <string name="menu_item_developer_options_show_dumped_log">Show dumped log</string>
    <string name="subtitle_navigation_hub">Navigation Hub</string>
    <string name="group_title_navigation_drawer_manage">Manage</string>
    <string name="group_title_navigation_import_export_content">Import/Export Content</string>
    <string name="item_navigation_drawer_browse_locations">Browse Locations</string>
    <string name="item_navigation_drawer_manage_credit_types">Credit Types</string>
    <string name="item_navigation_drawer_manage_categories">Categories</string>
    <string name="item_navigation_drawer_manage_manufacturers">Manufacturers</string>
    <string name="item_navigation_drawer_manage_models">Models</string>
    <string name="item_navigation_drawer_manage_statuses">Statuses</string>
    <string name="item_navigation_drawer_import">Import</string>
    <string name="item_navigation_drawer_export">Export</string>
    <string name="error_export_fail">Export failed</string>
    <string name="error_import_fail">Import failed</string>
    <string name="error_import_fail_invalid_uri">Invalid file picked</string>
    <string name="error_new_parent_is_not_location">Select a location</string>
    <string name="error_new_parent_is_own_descendant">New parent cannot be its own descendant!</string>
    <string name="alert_dialog_title_overwrite_file">FILE ALREADY EXISTS</string>
    <string name="alert_dialog_message_overwrite_file">Do you want to overwrite existing file?</string>
    <string name="alert_dialog_title_overwrite_content">IMPORT CONTENT</string>
    <string name="alert_dialog_message_confirm_overwrite_content">Do you want to import content? \nThis will permanently overwrite your existing content!</string>
    <string name="alert_dialog_title_export_file_not_found">FILE NOT FOUND</string>
    <string name="alert_dialog_message_export_file_not_found">File %1$s not found in that location. \nDo you want to pick a file manually?</string>
    <string name="information_export_success">Content exported to %1$s</string>
    <string name="information_import_success">Content imported</string>
    <string name="information_restore_content_backup_success">Content restored</string>
    <string name="text_click_back_again_to_exit">Click BACK again to exit</string>
    <string name="hint_search_content">Search content</string>
    <string name="locations">Locations</string>
    <string name="text_browse_locations">Browse Locations</string>
    <string name="title_edit_location">Edit Location</string>
    <string name="subtitle_create_location">create location</string>
    <string name="hint_enter_location_name">Enter location name</string>
    <string name="alert_dialog_message_confirm_remove_location">Do you really want to remove \'%1$s\' and attach all of its children to \'%2$s\'?</string>
    <string name="alert_dialog_title_relocate">RELOCATE</string>
    <string name="alert_dialog_message_confirm_relocate">Do you really want to relocate \'%1$s\' to \'%2$s\'?</string>
    <string name="parks">Parks</string>
    <string name="title_edit_park">Edit Park</string>
    <string name="subtitle_create_park">Create park</string>
    <string name="subtitle_park_show_tab_overview">Overview</string>
    <string name="subtitle_park_show_tab_attractions">Attractions</string>
    <string name="subtitle_park_show_tab_visits">Visits</string>
    <string name="hint_enter_park_name">Enter park name</string>
    <string name="title_create_visit">Create Visit</string>
    <string name="title_show_visit">Visit</string>
    <string name="title_pick_visit">Pick Visit</string>
    <string name="error_visit_already_exists">Visit for that day already exists…</string>
    <string name="alert_dialog_title_visit_already_exists">VISIT ALREADY EXISTS</string>
    <string name="alert_dialog_message_visit_already_exists">Do you want to override existing visit? \n(existing data will be lost, ride counts will be adjusted)</string>
    <string name="alert_dialog_message_remove_visited_attraction">Do you want to remove visited %1$s? \n(tracked rides will be lost, ride count will be adjusted)</string>
    <string name="description_decrease_ride_count">decrease ride count</string>
    <string name="description_increase_ride_count">increase ride count</string>
    <string name="text_visited_attraction_pretty_print">%1$dx %2$s</string>
    <string name="text_visit_display_full_name">%1$s @ %2$s</string>
    <string name="attractions">Attractions</string>
    <string name="title_pick_attractions">Pick Attractions</string>
    <string name="help_title_show_attraction">Attraction Details</string>
    <string name="subtitle_attractions_to_add_to_visit">to add to your visit</string>
    <string name="alert_dialog_title_add_attractions">ADD ATTRACTIONS</string>
    <string name="alert_dialog_message_confirm_add_attractions_to_visit">Do you want to add attractions to your visit?</string>
    <string name="alert_dialog_title_delete_attraction">DELETE ATTRACTION</string>
    <string name="alert_dialog_message_confirm_delete_attraction">Do you really want to delete \'%1$s\'? \n(attraction is also removed from visits, rides are deleted and ride count as well as credit count is adjusted)</string>
    <string name="hint_enter_attraction_name">Enter attraction name</string>
    <string name="title_create_attraction">Create Attraction</string>
    <string name="subtitle_create_attraction">at %1$s</string>
    <string name="title_edit_on_site_attraction">Edit Attraction</string>
    <string name="header_credit_type">Credit Type:</string>
    <string name="header_category">Category:</string>
    <string name="header_manufacturer">Manufacturer:</string>
    <string name="header_status">Status:</string>
</resources>