<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigationItem_BrowseLocations"
            android:icon="@drawable/ic_baseline_place"
            android:title="@string/item_navigation_drawer_browse_locations"/>
    </group>

    <group>
        <item android:title="@string/group_title_navigation_drawer_manage">
            <menu>
                <item
                    android:id="@+id/navigationItem_ManageBlueprints"
                    android:title="@string/item_navigation_drawer_manage_blueprints"
                    android:icon="@drawable/ic_baseline_build"/>
                <item
                    android:id="@+id/navigationItem_ManageCreditTypes"
                    android:title="@string/item_navigation_drawer_manage_credit_types"
                    android:icon="@drawable/ic_baseline_build"/>
                <item
                    android:id="@+id/navigationItem_ManageCategories"
                    android:title="@string/item_navigation_drawer_manage_categories"
                    android:icon="@drawable/ic_baseline_build"/>
                <item
                    android:id="@+id/navigationItem_ManageManufacturers"
                    android:title="@string/item_navigation_drawer_manage_manufacturers"
                    android:icon="@drawable/ic_baseline_build"/>
                <item
                    android:id="@+id/navigationItem_ManageModels"
                    android:title="@string/item_navigation_drawer_manage_models"
                    android:icon="@drawable/ic_baseline_build"/>
                <item
                    android:id="@+id/navigationItem_ManageStatuses"
                    android:title="@string/item_navigation_drawer_manage_statuses"
                    android:icon="@drawable/ic_baseline_build"/>
            </menu>
        </item>
    </group>

    <group>
        <item android:title="@string/group_title_navigation_import_export_content">
            <menu>
                <item
                    android:id="@+id/navigationItem_Import"
                    android:icon="@drawable/ic_baseline_unarchive"
                    android:title="@string/item_navigation_drawer_import" />
                <item
                    android:id="@+id/navigationItem_Export"
                    android:icon="@drawable/ic_baseline_archive"
                    android:title="@string/item_navigation_drawer_export" />
            </menu>
        </item>
    </group>

</menu>