<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="14dp"
    android:layout_height="0dp"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            style="@style/StandardEditText"
            android:textSize="16sp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="16sp"
            android:id="@+id/editTextCreateOrEditAttractionName"
            android:hint="@string/hint_enter_attraction_name"
            tools:ignore="Autofill"/>

        <LinearLayout
            style="@style/CreateOrEditAttractionSelectBarLayout"
            android:id="@+id/linearLayoutCreateOrEditAttraction_Blueprint">

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/header_blueprint"/>

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:id="@+id/textViewCreateOrEditAttraction_Blueprint"
                android:width="0sp"
                android:layout_weight="1"
                android:layout_width="0dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top">

                <ImageView
                    style="@style/CreateOrEditPickImageHolder"
                    android:id="@+id/imageViewCreateOrEditAttraction_PickBlueprint"
                    android:contentDescription="@string/description_image_view" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/CreateOrEditAttractionSelectBarLayout"
            android:id="@+id/linearLayoutCreateOrEditAttraction_CreditType">

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/header_credit_type"/>

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:id="@+id/textViewCreateOrEditAttraction_CreditType"
                android:layout_width="0sp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top">

                <ImageView
                    style="@style/CreateOrEditPickImageHolder"
                    android:id="@+id/imageViewCreateOrEditAttraction_PickCreditType"
                    android:contentDescription="@string/description_image_view" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/CreateOrEditAttractionSelectBarLayout"
            android:id="@+id/linearLayoutCreateOrEditAttraction_Category">

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/header_category"/>

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:id="@+id/textViewCreateOrEditAttraction_Category"
                android:layout_width="0sp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top">

                <ImageView
                    style="@style/CreateOrEditPickImageHolder"
                    android:id="@+id/imageViewCreateOrEditAttraction_PickCategory"
                    android:contentDescription="@string/description_image_view" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/CreateOrEditAttractionSelectBarLayout"
            android:id="@+id/linearLayoutCreateOrEditAttraction_Manufacturer">

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/header_manufacturer"/>

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:id="@+id/textViewCreateOrEditAttraction_Manufacturer"
                android:layout_width="0sp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top">

                <ImageView
                    style="@style/CreateOrEditPickImageHolder"
                    android:id="@+id/imageViewCreateOrEditAttraction_PickManufacturer"
                    android:contentDescription="@string/description_image_view" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/CreateOrEditAttractionSelectBarLayout"
            android:id="@+id/linearLayoutCreateOrEditAttraction_Status">

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/header_status"/>

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:id="@+id/textViewCreateOrEditAttraction_Status"
                android:layout_width="0sp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top">

                <ImageView
                    style="@style/CreateOrEditPickImageHolder"
                    android:id="@+id/imageViewCreateOrEditAttraction_PickStatus"
                    android:contentDescription="@string/description_image_view" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/CreateOrEditAttractionBarLayout"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:gravity="start|center_vertical"
                android:textStyle="bold"
                android:text="@string/text_untracked_rides"/>

            <EditText
                style="@style/StandardEditText"
                android:id="@+id/editTextCreateOrEditAttractionUntrackedRideCount"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:gravity="start|center_vertical"
                android:inputType="number"
                android:textSize="16sp"
                tools:ignore="Autofill"
                android:hint="@string/hint_untracked_ride_count"/>

        </LinearLayout>

        <include
            layout="@layout/bottom_spacer"/>

    </LinearLayout>

</ScrollView>
