<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="14dp"
    android:layout_height="0dp"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/StandardTextInputLayout"
            android:id="@+id/textInputLayoutCreateOrEditAttraction_AttractionName"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/StandardTextInputEditText"
                android:id="@+id/textInputEditTextCreateOrEditAttraction_AttractionName"/>

        </com.google.android.material.textfield.TextInputLayout>

<!--        <LinearLayout-->
<!--            style="@style/CreateOrEditAttractionSelectBarLayout"-->
<!--            android:id="@+id/linearLayoutCreateOrEditAttraction_Blueprint">-->

<!--            <TextView-->
<!--                style="@style/CreateOrEditAttractionTextView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:textStyle="bold"-->
<!--                android:text="@string/header_model"/>-->

<!--            <TextView-->
<!--                style="@style/CreateOrEditAttractionTextView"-->
<!--                android:id="@+id/textViewCreateOrEditAttraction_Blueprint"-->
<!--                android:width="0sp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_width="0dp"/>-->

<!--            <ImageView-->
<!--                style="@style/StandardImageHolder"-->
<!--                android:id="@+id/imageViewCreateOrEditAttraction_PickBlueprint"-->
<!--                android:contentDescription="@string/description_image_view" />-->

<!--        </LinearLayout>-->

        <LinearLayout
            style="@style/CreateOrEditAttractionSelectBarLayout"
            android:id="@+id/linearLayoutCreateOrEditAttraction_CreditType">

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/header_credit_type"/>

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:id="@+id/textViewCreateOrEditAttraction_CreditType"
                android:layout_width="0sp"
                android:layout_weight="1"/>

            <ImageView
                style="@style/StandardImageHolder"
                android:id="@+id/imageViewCreateOrEditAttraction_PickCreditType"
                android:contentDescription="@string/description_image_view" />

        </LinearLayout>

        <LinearLayout
            style="@style/CreateOrEditAttractionSelectBarLayout"
            android:id="@+id/linearLayoutCreateOrEditAttraction_Category">

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/header_category"/>

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:id="@+id/textViewCreateOrEditAttraction_Category"
                android:layout_width="0sp"
                android:layout_weight="1"/>

            <ImageView
                style="@style/StandardImageHolder"
                android:id="@+id/imageViewCreateOrEditAttraction_PickCategory"
                android:contentDescription="@string/description_image_view" />

        </LinearLayout>

        <LinearLayout
            style="@style/CreateOrEditAttractionSelectBarLayout"
            android:id="@+id/linearLayoutCreateOrEditAttraction_Manufacturer">

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/header_manufacturer"/>

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:id="@+id/textViewCreateOrEditAttraction_Manufacturer"
                android:layout_width="0sp"
                android:layout_weight="1"/>

            <ImageView
                style="@style/StandardImageHolder"
                android:id="@+id/imageViewCreateOrEditAttraction_PickManufacturer"
                android:contentDescription="@string/description_image_view" />

        </LinearLayout>

        <LinearLayout
            style="@style/CreateOrEditAttractionSelectBarLayout"
            android:id="@+id/linearLayoutCreateOrEditAttraction_Status">

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/header_status"/>

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:id="@+id/textViewCreateOrEditAttraction_Status"
                android:layout_width="0sp"
                android:layout_weight="1"/>

            <ImageView
                style="@style/StandardImageHolder"
                android:id="@+id/imageViewCreateOrEditAttraction_PickStatus"
                android:contentDescription="@string/description_image_view" />

        </LinearLayout>

        <LinearLayout
            style="@style/CreateOrEditAttractionBarLayout"
            android:id="@+id/linearLayoutCreateOrEditAttraction_UntrackedRideCount"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CreateOrEditAttractionTextView"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:gravity="start|center_vertical"
                android:textStyle="bold"
                android:text="@string/text_untracked_rides"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/StandardTextInputLayout"
                android:id="@+id/textInputLayoutCreateOrEditAttractionName_UntrackedRideCount"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:gravity="start|center_vertical"
                android:textSize="16sp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/StandardTextInputEditText"
                    android:id="@+id/textInputEditTextCreateOrEditAttraction_UntrackedRideCount"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <include
            layout="@layout/layout_bottom_spacer"/>

    </LinearLayout>

</ScrollView>
